--- a/MyBank/index.html
+++ b/MyBank/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Web site created using Vite" />
 <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    connect-src 'self' https://api.iconify.design https://api.simplesvg.com https://api.unisvg.com https://bpi-bank.onrender.com http://localhost:7878 https://bpi-bank-system.onrender.com https://www.mybpi.online https://mybpi.online;
+    connect-src 'self' https://api.iconify.design https://api.simplesvg.com https://api.unisvg.com https://bpi-bank.onrender.com https://bpi-bank-4fwu.onrender.com http://localhost:7878 https://bpi-bank-system.onrender.com https://www.mybpi.online https://mybpi.online;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
     img-src 'self' data: https://res.cloudinary.com;
